finalizada la funcion de suscripcion al boletin, el template del email de notificacion de suscripcion al usuario,

--- a/html/commonScriptsAgro.html
+++ b/html/commonScriptsAgro.html
@@ -5,7 +5,6 @@
 <script src="/arquivos/menu-responsivo.js"></script>
 <script src="/arquivos/advanced-filter.js"></script>
 <script src="/arquivos/admake-mini-cart.js"></script>
-<script src="/arquivos/breadBrumbagro.js"></script>
 <script src="/arquivos/default.js"></script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCQLnmr5pv2JHAQ-X6C97fVa_CbalZZxSg"></script>
 <!-- JS del commonScripts-->
@@ -22,3 +21,8 @@
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
 </script>
 <!--Bootstrap v4.3-->
+
+
+<script src="/arquivos/boletin.js"></script>
+<script src="/arquivos/breadBrumbagro.js"></script>
+<script src="/arquivos/change-name-search.js"></script>
