--- a/html/email-template/user-contacto-agro.html
+++ b/html/email-template/user-contacto-agro.html
@@ -77,7 +77,7 @@
                     <tr>
                         <td colspan='3' align='right'>
                             <img src='https://demoagro.vteximg.com.br/arquivos/img.png' alt='footer-img'
-                                title='footer-img' style="position:relative; top: 20px">
+                                title='footer-img' style="position:relative; top: 20px;">
                         </td>
                     </tr>
                     <tr style="background: rgba(238, 236, 236, 0.593);">
