--- a/html/commonStylesAgro.html
+++ b/html/commonStylesAgro.html
@@ -20,6 +20,7 @@
 <link href="/arquivos/nosotros-agro.css" rel="stylesheet" type="text/css" />
 <link href="/arquivos/banners2-agro.css" rel="stylesheet" type="text/css" />
 <link href="/arquivos/contacto-agro.css" rel="stylesheet" type="text/css" />
+<link href="/arquivos/boletin.css" rel="stylesheet" type="text/css" />
 <!--Mis CSS-->
 
 <!--Font Awesome-->
