cambios a los templates de email, tanto para comentarios o suscripcion al boletin, tmb a la plantilla de access key del login

--- a/html/email-template/access-key-agro.html
+++ b/html/email-template/access-key-agro.html
@@ -78,11 +78,11 @@
                     style="background-color: #fff;color:#333;">
                     <!-- 600px container (white background) -->
                     <table cellspacing="0" cellpadding="0" border="0" bgcolor="#fff" class="container"
-                        style="max-width:600px;">
+                        style="max-width:800px;">
                         <tbody>
                             <tr>
                                 <td bgcolor="#ffffff" align="left" class="container-padding"
-                                    style="background-color: #ffffff; padding-left: 10px; padding-right: 3px; font-size: 13px; line-height: 19px; font-family: Helvetica, sans-serif; color: #333;">
+                                    style="background-color: #ffffff; padding-left: 10px; padding-right: 3px; font-size: 17px; line-height: 19px; font-family: Helvetica, sans-serif; color: #333;">
                                     <br />
                                     <table width="100%" cellspacing="0" cellpadding="0" border="0"
                                         class="columns-container">
@@ -114,7 +114,7 @@
                                                                                     style=' text-decoration:none; cursor: pointer'>
                                                                                     <img src='https://demoagro.vteximg.com.br/arquivos/facebook-agro.png'
                                                                                         alt='facebook' title='Facebook'
-                                                                                        width="20">
+                                                                                        width="15">
                                                                                 </a>
                                                                             </td>
                                                                             <td>
@@ -122,7 +122,7 @@
                                                                                     style=' text-decoration:none; cursor: pointer'>
                                                                                     <img src='https://demoagro.vteximg.com.br/arquivos/pinterest-agro.png'
                                                                                         alt='pinterest'
-                                                                                        title='Pinterest' width="30">
+                                                                                        title='Pinterest' width="22">
                                                                                 </a>
                                                                             </td>
                                                                             <td>
@@ -130,7 +130,7 @@
                                                                                     style='text-decoration:none; cursor: pointer'>
                                                                                     <img src='https://demoagro.vteximg.com.br/arquivos/instagram-agro.png'
                                                                                         alt='instagram'
-                                                                                        title='Instagram' width="45">
+                                                                                        title='Instagram' width="35">
                                                                                 </a>
                                                                             </td>
                                                                         </tr>
@@ -149,7 +149,7 @@
                                                         style="padding-bottom:0;margin-bottom:0;" class="col-3">
                                                         <tbody>
                                                             <tr>
-                                                                <td align="left">
+                                                                <td align="left" style="font-size: 17px;">
                                                                     <br />
                                                                     <p>Hola, <strong>{{to.0.name}}</strong>.</p>
                                                                     <p>Necesitamos su confirmación para liberar la
@@ -161,7 +161,7 @@
                                                                     <div
                                                                         style="border: 1px solid gray; background: white; padding: 10px;">
                                                                         <div
-                                                                            style='background: #5b8517dc;  color:white;text-align:center;font-size:42px;padding:20px;'>
+                                                                            style='background: #1e8115;  color:white;text-align:center;font-size:42px;padding:20px;'>
                                                                             <strong>{{aditionalData.accessKey}}</strong>
                                                                         </div>
                                                                     </div>
@@ -182,8 +182,7 @@
                                                             </tr>
                                                         </tbody>
                                                     </table>
-
-
+                                                </td>
                                             </tr>
                                         </tbody>
                                     </table>
@@ -193,12 +192,12 @@
                     </table>
                 </td>
             </tr>
-            <tr>
+            <tr width="80%">
                 <td>
                     <img src='https://demoagro.vteximg.com.br/arquivos/img.png' alt='footer-img' title='footer-img'
                         style="position:relative; top: 0px; max-width:100%"></td>
             </tr>
-            <tr style="background: rgba(238, 236, 236, 0.593);">
+            <tr style="background:rgb(242, 242, 242);" width="80%">
                 <td style='padding:100px 0px;'>
                     <table border="0" cellpadding="0" cellspacing="0" width="100%">
                         <tr>
@@ -271,7 +270,7 @@
                     </table>
                 </td>
             </tr>
-            <tr style="background: rgba(238, 236, 236, 0.593);">
+            <tr style="background:rgb(242, 242, 242);">
                 <td style="padding: 30px 30px 30px 30px;">
                     <table border="0" cellpadding="0" cellspacing="0" width="100%">
                         <tr>
