--- a/html/email-template/admin-contacto-agro.html
+++ b/html/email-template/admin-contacto-agro.html
@@ -113,7 +113,7 @@
                                 title='footer-img' style="position:relative; top: 20px">
                         </td>
                     </tr>
-                    <tr style="background: rgba(238, 236, 236, 0.593);">
+                    <tr style="background:rgb(242, 242, 242);">
                         <td style='padding:100px 0px;'>
                             <table border="0" cellpadding="0" cellspacing="0" width="100%">
                                 <tr>
@@ -187,7 +187,7 @@
                             </table>
                         </td>
                     </tr>
-                    <tr style="background: rgba(238, 236, 236, 0.593);">
+                    <tr style="background:rgb(242, 242, 242);">
                         <td style="padding: 30px 30px 30px 30px;">
                             <table border="0" cellpadding="0" cellspacing="0" width="100%">
                                 <tr>
