--- a/html/email-template/suscripcion-boletin-agro.html
+++ b/html/email-template/suscripcion-boletin-agro.html
@@ -180,7 +180,7 @@
                     <img src="https://demoagro.vteximg.com.br/arquivos/img.png" alt="footer-img" title="footer-img"
                         style="position:relative; top: 10px; max-width:100%"></td>
             </tr>
-            <tr style="background: rgba(238, 236, 236, 0.593);">
+            <tr style="background:rgb(242, 242, 242);">
                 <td style="padding:100px 0px;">
                     <table border="0" cellpadding="0" cellspacing="0" width="100%">
                         <tbody>
@@ -262,7 +262,7 @@
                     </table>
                 </td>
             </tr>
-            <tr style="background: rgba(238, 236, 236, 0.593);">
+            <tr style="background:rgb(242, 242, 242);">
                 <td style="padding: 30px 30px 30px 30px;">
                     <table border="0" cellpadding="0" cellspacing="0" width="100%">
                         <tbody>
