--- a/html/subTemplates/menu-search-header-agro.html
+++ b/html/subTemplates/menu-search-header-agro.html
@@ -18,10 +18,10 @@
 
                     <ul class="navbar-nav my-2 my-lg-0 menu-position">
                         <li class="nav-item active">
-                            <a class="nav-link" href="#">INICIO <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="https://demoagro.myvtex.com/">INICIO <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">SOBRE NOSOTROS</a>
+                            <a class="nav-link" href="/institucional/nosotros">SOBRE NOSOTROS</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
