correccion de estilos y posicionamiento del breadcrumb y de algunos elementos en la seccion de contacto, inicio del trabajo de la seccion de mas vendidos realizando llamado con la api de vtex

--- a/html/contacto-agro.html
+++ b/html/contacto-agro.html
@@ -42,90 +42,78 @@
 
         <section id="institucional-content" class="container">
 
-            <div id="box-bread-brumb" class="hidden-xs list-inline">
+            <div id="box-bread-brumb-contacto" class="hidden-xs list-inline">
                 <a href="https://demoagro.myvtex.com/">INICIO</a> /
                 <span>CONTACTO</span>
             </div>
 
 
             <div id="institucional-extra-middle"></div>
-            <div class="conteudo-institucional container-contenido">
-                <div class="container container-ajuste">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-sm-12">
-                                <h2 class="contenido-title">Contacto</h2>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-sm-7">
-                                <iframe
-                                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3733.3154861159533!2d-103.38942068518449!3d20.656740005750123!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8428addc0200bb45%3A0x270e5365adc0145!2sTesselar!5e0!3m2!1sen!2smx!4v1553708992122"
-                                    width="100%" height="450" frameborder="0" style="border:0"></iframe>
-                            </div>
-                            <div class="col-sm-5">
-                                <form action="#" method="POST" id="frmContact">
-                                    <div class="form-group">
-                                        <input type="text" class="form-control" id="nameContact" name="name"
-                                            placeholder="NOMBRE" onkeyup="this.value=NumText(this.value)"
-                                            required="required" />
-                                    </div>
-                                    <div class="form-group">
-                                        <input type="email" class="form-control" id="emailContact" name="email"
-                                            placeholder="CORREO ELECTRÓNICO" onkeyup="this.value=NumText(this.value)"
-                                            required="required" />
-                                    </div>
-                                    <div class="form-group">
-                                        <input type="text" class="form-control" id="affairContact" name="affair"
-                                            placeholder="ASUNTO" onkeyup="this.value=NumText(this.value)"
-                                            required="required" />
-                                    </div>
-                                    <div class="form-group col-sm-12 padding-none">
-                                        <textarea cols="60" rows="7" id="messageContact"
-                                            placeholder="ESCRIBA SU MENSAJE" onkeyup="this.value=NumText(this.value)"
-                                            required="required"></textarea>
-                                    </div>
-                                    <div class="form-group text-right">
-                                        <input type="submit" class="btn boton-contacto" value="ENVIAR"
-                                            name="enviarContacto" id="enviarContacto"
-                                            onclick="return validarContact()" />
-                                    </div>
-                                </form>
-                            </div>
-                        </div>
+            <div class="conteudo-institucional container">
+                <div class="row">
+                    <div class="col-sm-12">
+                        <h2 class="contenido-title">Contacto</h2>
                     </div>
                 </div>
-                <div class="container container-contact2">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-sm-12">
-                                <h2 class="contenido-title">Centros de envío</h2>
+                <div class="row">
+                    <div class="col-sm-7">
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3733.3154861159533!2d-103.38942068518449!3d20.656740005750123!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8428addc0200bb45%3A0x270e5365adc0145!2sTesselar!5e0!3m2!1sen!2smx!4v1553708992122"
+                            width="100%" height="450" frameborder="0" style="border:0"></iframe>
+                    </div>
+                    <div class="col-sm-5">
+                        <form action="#" method="POST" id="frmContact">
+                            <div class="form-group">
+                                <input type="text" class="form-control" id="nameContact" name="name"
+                                    placeholder="NOMBRE" onkeyup="this.value=NumText(this.value)" required="required" />
                             </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-sm-4">
-                                <iframe
-                                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3733.3154861159533!2d-103.38942068518449!3d20.656740005750123!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8428addc0200bb45%3A0x270e5365adc0145!2sTesselar!5e0!3m2!1sen!2smx!4v1553708992122"
-                                    width="100%" height="200" frameborder="0" style="border:0"></iframe>
+                            <div class="form-group">
+                                <input type="email" class="form-control" id="emailContact" name="email"
+                                    placeholder="CORREO ELECTRÓNICO" onkeyup="this.value=NumText(this.value)"
+                                    required="required" />
                             </div>
-                            <div class="col-sm-2 text-left">
-                                <p>26 Stark Station</p>
-                                <p>Suite 006</p>
-                                <p>441-768-3785</p>
-                                <p>New Jamir</p>
+                            <div class="form-group">
+                                <input type="text" class="form-control" id="affairContact" name="affair"
+                                    placeholder="ASUNTO" onkeyup="this.value=NumText(this.value)" required="required" />
                             </div>
-                            <div class="col-sm-4">
-                                <iframe
-                                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3733.3154861159533!2d-103.38942068518449!3d20.656740005750123!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8428addc0200bb45%3A0x270e5365adc0145!2sTesselar!5e0!3m2!1sen!2smx!4v1553708992122"
-                                    width="100%" height="200" frameborder="0" style="border:0"></iframe>
+                            <div class="form-group col-sm-12 padding-none">
+                                <textarea cols="60" rows="7" id="messageContact" placeholder="ESCRIBA SU MENSAJE"
+                                    onkeyup="this.value=NumText(this.value)" required="required"></textarea>
                             </div>
-                            <div class="col-sm-2 text-left">
-                                <p>28 Reilly Springs</p>
-                                <p>Suite 862</p>
-                                <p>297-480-8543</p>
-                                <p>New Melynabury</p>
+                            <div class="form-group text-right">
+                                <input type="submit" class="btn boton-contacto" value="ENVIAR" name="enviarContacto"
+                                    id="enviarContacto" onclick="return validarContact()" />
                             </div>
-                        </div>
+                        </form>
+                    </div>
+                </div>
+                <div class="row row-centros-envios">
+                    <div class="col-sm-12">
+                        <h2 class="contenido-title">Centros de envío</h2>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-4">
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3733.3154861159533!2d-103.38942068518449!3d20.656740005750123!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8428addc0200bb45%3A0x270e5365adc0145!2sTesselar!5e0!3m2!1sen!2smx!4v1553708992122"
+                            width="100%" height="200" frameborder="0" style="border:0"></iframe>
+                    </div>
+                    <div class="col-sm-2 text-left">
+                        <p class="dir-envio">26 Stark Station Suite 006</p>
+                        <p></p>
+                        <p>441-768-3785</p>
+                        <p>New Jamir</p>
+                    </div>
+                    <div class="col-sm-4">
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3733.3154861159533!2d-103.38942068518449!3d20.656740005750123!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8428addc0200bb45%3A0x270e5365adc0145!2sTesselar!5e0!3m2!1sen!2smx!4v1553708992122"
+                            width="100%" height="200" frameborder="0" style="border:0"></iframe>
+                    </div>
+                    <div class="col-sm-2 text-left">
+                        <p class="dir-envio">28 Reilly Springs Suite 862</p>
+                        <p></p>
+                        <p>297-480-8543</p>
+                        <p>New Melynabury</p>
                     </div>
                 </div>
             </div>
