--- a/html/subTemplates/institucionales/aviso-privacidad-agro.html
+++ b/html/subTemplates/institucionales/aviso-privacidad-agro.html
@@ -38,7 +38,7 @@
 
         <section id="institucional-content" class="container">
 
-            <div id="box-bread-brumb" class="hidden-xs list-inline">
+            <div id="box-bread-brumb-inst" class="hidden-xs list-inline">
                 <a href="https://demoagro.myvtex.com/">INICIO</a> /
                 <span>AVISO DE PRIVACIDAD</span>
             </div>
