--- a/html/subTemplates/institucionales/nosotros-agro.html
+++ b/html/subTemplates/institucionales/nosotros-agro.html
@@ -12,7 +12,15 @@
     <script>
         console.log('9jj')
     </script>
+    <style>
+        #box-bread-brumb-nosotros {
+            color: green;
+        }
 
+        #box-bread-brumb-nosotros a {
+            color: green !important;
+        }
+    </style>
 </head>
 
 <body id="home-page">
@@ -36,9 +44,9 @@
 
         <div id="institucional-extra-top"></div>
 
-        <section id="institucional-content" class="container">
+        <section>
 
-            <div id="box-bread-brumb" class="hidden-xs list-inline">
+            <div id="box-bread-brumb-nosotros" class="hidden-xs list-inline">
                 <a href="https://demoagro.myvtex.com/">INICIO</a> /
                 <span>SOBRE COMPAÑIA</span>
             </div>
