--- a/html/subTemplates/institucionales/nosotros-placeholder.html
+++ b/html/subTemplates/institucionales/nosotros-placeholder.html
@@ -1,6 +1,7 @@
-<div class="container">
+<div class="container-fluid">
     <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-1"></div>
+        <div class="col-md-5 col-xl-6" id="texto-nosotros">
             <h2 class="titulo-institucional">Sobre Compañia</h2>
             <span>Morbi congue velit et mattis porttitor. Vestibulum ullamcorper metus eget diam luctus faucibus.
                 Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Morbi vitae
@@ -24,6 +25,7 @@
                 Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Morbi vitae
                 ullamcorper turpis, at cursus lacus.</span>
         </div>
-        <div class="col-md-6"><img id="img-nosotros" src="/arquivos/sobre-compañia.jpg" alt="" /></div>
+        <div class="col-md-5 col-xl-4"><img id="img-nosotros" src="/arquivos/sobre-compañia.jpg" alt="" /></div>
+        <div class="col-md-1"></div>
     </div>
 </div>
