--- a/html/subTemplates/institucionales/preguntas-frecuentes-agro.html
+++ b/html/subTemplates/institucionales/preguntas-frecuentes-agro.html
@@ -38,14 +38,14 @@
 
         <section id="institucional-content" class="container">
 
-            <div id="box-bread-brumb" class="hidden-xs list-inline">
+            <div id="box-bread-brumb-inst" class="hidden-xs list-inline">
                 <a href="https://demoagro.myvtex.com/">INICIO</a> /
                 <span>PREGUNTAS FRECUENTES</span>
             </div>
 
             <div id="institucional-extra-middle"></div>
 
-            <div class="conteudo-institucional">
+            <div class="conteudo-institucional-preguntas">
                 <h2 class="titulo-institucional">Preguntas frecuentes</h2>
 
                 <vtex:contentPlaceHolder id="preguntas-frecuentes" />
