--- a/html/shelfTemplates/last-agro-shelf.html
+++ b/html/shelfTemplates/last-agro-shelf.html
@@ -6,70 +6,70 @@
  * Bootstrap v.3
  *
  -->
-#set($id = $product.Id)
-#set($idSku = $product.productVariantId)
-#set($uri = $product.Uri)
-#set($escapedName = $product.HtmlEscapedName)
-
-#if ($product.IsInStock)
-<span class="box-item text-center">
-    #else
-    <span class="box-item text-center product-off">
-        #end
-
-        <a class="product-image" title="$escapedName" href="$uri">
-            $product.GetImageTag(2)
-        </a>
-
-        <b class="product-name">
-            <a title="$escapedName" href="$uri">
-                $product.Name
-            </a>
-        </b>
-        #if ($product.IsInStock)
-        <span class="price">
-            <a title="$escapedName" href="$uri">
-                #if ($product.HasBestPrice)
-                <span class="old-price" id="old-price$id">
-                    $product.ListPrice MXN
-                </span>
-                <span class="best-price" id="best-price$id">
-                    $product.BestPrice MXN
-                </span>
-                #else
-                <span class="best-price" id="best-price$id">
-                    $product.BestPrice MXN
-                </span>        
-                #end
-                #if ($product.NumbersOfInstallment > 1)
-                <span class="installment">
-                    ou ${product.NumbersOfInstallment}x de $product.InstallmentValue
-                </span>
-                #end
-            </a>
-        </span>
-        $product.BottomBuyAsynchronous
-
-        #else
-        <span class="out-of-stock">Producto Agotado</span>
-        #end
-    </span>
-
-    #if ($product.IsInStock)
-    <script>
-        vtexjs.catalog.getProductWithVariations($id).done(function (product) {
-            if (product.skus.length > 1) {
-                var precioMasAlto = [];
-                product.skus.forEach((value, index) => {
-                    precioMasAlto.push(value.bestPriceFormated.split('$')[1]);
-                })
-                var max = Math.max(...precioMasAlto);
-                var centavosDisplay = '';
-                max.toString().indexOf(".") === -1 ? centavosDisplay = '.00' : centavosDisplay = '';
-                $('.precioProducto' + product.productId).html('$' + max + centavosDisplay + " MXN");
-            } else if (product.skus.length == 1) {
-                $('.precioProducto' + product.productId).html(product.skus[0].bestPriceFormated + " MXN");
-            }
-        });
-    </script>
-    #end
+ #set($id = $product.Id)
+ #set($idSku = $product.productVariantId)
+ #set($uri = $product.Uri)
+ #set($escapedName = $product.HtmlEscapedName)
+ 
+ #if ($product.IsInStock)
+ <span class="box-item text-center">
+     #else
+     <span class="box-item text-center product-off">
+         #end
+ 
+         <a class="product-image" title="$escapedName" href="$uri">
+             $product.GetImageTag(2)
+         </a>
+ 
+         <b class="product-name">
+             <a title="$escapedName" href="$uri">
+                 $product.Name
+             </a>
+         </b>
+         #if ($product.IsInStock)
+         <span class="price">
+             <a title="$escapedName" href="$uri">
+                 #if ($product.HasBestPrice)
+                 <span class="old-price" id="old-price$id">
+                     MXN $product.ListPrice 
+                 </span>
+                 <span class="best-price" id="best-price$id">
+                     $product.BestPrice MXN
+                 </span>
+                 #else
+                 <span class="best-price" id="best-price$id">
+                     $product.BestPrice MXN
+                 </span>        
+                 #end
+                 #if ($product.NumbersOfInstallment > 1)
+                 <span class="installment">
+                     ou ${product.NumbersOfInstallment}x de $product.InstallmentValue
+                 </span>
+                 #end
+             </a>
+         </span>
+         $product.BottomBuyAsynchronous
+ 
+         #else
+         <span class="out-of-stock">Producto Agotado</span>
+         #end
+     </span>
+ 
+     #if ($product.IsInStock)
+     <script>
+         vtexjs.catalog.getProductWithVariations($id).done(function (product) {
+             if (product.skus.length > 1) {
+                 var precioMasAlto = [];
+                 product.skus.forEach((value, index) => {
+                     precioMasAlto.push(value.bestPriceFormated.split('$')[1]);
+                 })
+                 var max = Math.max(...precioMasAlto);
+                 var centavosDisplay = '';
+                 max.toString().indexOf(".") === -1 ? centavosDisplay = '.00' : centavosDisplay = '';
+                 $('.precioProducto' + product.productId).html('$' + max + centavosDisplay + " MXN");
+             } else if (product.skus.length == 1) {
+                 $('.precioProducto' + product.productId).html(product.skus[0].bestPriceFormated + " MXN");
+             }
+         });
+     </script>
+     #end
