--- a/html/subTemplates/menu-search-header-agro.html
+++ b/html/subTemplates/menu-search-header-agro.html
@@ -1,3 +1,10 @@
+<style>
+    .fa-shopping-cart:before {
+        content: "\f290";
+        font-size: 25px;
+    }
+</style>
+
 <div class="container-fluid">
     <div class="row">
         <div class="col-xs-12 col-md-10 col-menu">
@@ -18,7 +25,8 @@
 
                     <ul class="navbar-nav my-2 my-lg-0 menu-position">
                         <li class="nav-item active">
-                            <a class="nav-link" href="https://demoagro.myvtex.com/">INICIO <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="https://demoagro.myvtex.com/">INICIO <span
+                                    class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/institucional/nosotros">SOBRE NOSOTROS</a>
