carrusel de mas vendidos creado con slick, se le aplicaron los estilos

--- a/html/home-agro.html
+++ b/html/home-agro.html
@@ -12,9 +12,10 @@
     <link rel="stylesheet" type="text/css" href="/arquivos/bestselleragro.css" />
     <link rel="stylesheet" type="text/css" href="/arquivos/slick.css" />
     <link rel="stylesheet" type="text/css" href="/arquivos/slick-theme.css" />
+    
     <script src="/arquivos/slick.min.js"></script>
     <script src="/arquivos/carrusel.js"></script>
-    <script src="/arquivos/bestseller.js"></script>
+    <script src="/arquivos/bestseller.js"></script>    
     <script src="/arquivos/main.js"></script>
 
     <script>
@@ -103,9 +104,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-xs-12">
-
-                        <div id='cards-productos-mas-vendidos'></div>
-                        
+                        <div id='mas-vendidos-carrusel'></div>
                     </div>
                 </div>
             </div>
@@ -121,5 +120,6 @@
 </body>
 
 <vtex:template id="commonScriptsAgro" />
+<script src="/arquivos/responsive-carrusel.js"></script>
 
 </html>
