mejoras en los estilos de los carruseles del home page, ademas se inicio el trabajo para la pagina de categorias,llamada a la api y me trae los productos segun su categoria

--- a/html/categoria-agro.html
+++ b/html/categoria-agro.html
@@ -1,12 +1,3 @@
-<!-- 
- *
- * Desenvolvido por Integrando.se
- * hello@integrando.se
- * 
- * Bootstrap v.3
- *
- -->
-
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:vtex="http://www.vtex.com.br/2009/vtex-common"
     xmlns:vtex.cmc="http://www.vtex.com.br/2009/vtex-commerce" lang="en-us">
@@ -22,8 +13,10 @@
     <link href="/arquivos/ion.rangeSlider.skinHTML5.css" rel="stylesheet" type="text/css" />
     <script src="/arquivos/ion.rangeSlider.min.js"></script>
 
+    <script src="/arquivos/productCategory.js"></script> 
+
     <script>
-        console.log('lov')
+        console.log('probando');
     </script>
 
 </head>
@@ -94,6 +87,11 @@
                     </div><!-- #collections -->
 
                 </article><!-- #main-content -->
+
+
+                <!--Mi seccion de prueba-->
+                <div id="productos-categoria">probando</div>
+                <!--Mi seccion de prueba-->
 
             </div><!-- .row -->
 
