--- a/html/subTemplates/menu-search-header-agro.html
+++ b/html/subTemplates/menu-search-header-agro.html
@@ -1,55 +1,70 @@
+<script src="/arquivos/productCategory.js"></script>
+
 <style>
     .fa-shopping-cart:before {
         content: "\f290";
         font-size: 25px;
     }
 </style>
-
 <div class="container-fluid">
     <div class="row">
         <div class="col-xs-12 col-md-10 col-menu">
             <nav class="navbar navbar-expand-md navbar-light">
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03"
-                    aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button"
+                    data-toggle="collapse" data-target="#navbarTogglerDemo03"
+                    aria-controls="navbarTogglerDemo03" aria-expanded="false"
+                    aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <a class="navbar-brand logo-position" href="https://demoagro.myvtex.com/"><img width="100" height="100"
-                        class="d-inline-block align-top" src="/arquivos/logo-agro.png" alt="Green Food" /></a>
-
-
+                <a class="navbar-brand logo-position"
+                    href="https://demoagro.myvtex.com/"><img width="100"
+                        height="100"
+                        class="d-inline-block align-top"
+                        src="/arquivos/logo-agro.png" alt="Green Food" /></a>
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-
-                    <form class="form-inline mr-auto ">
+                    <form class="form-inline mr-auto">
                     </form>
 
 
                     <ul class="navbar-nav my-2 my-lg-0 menu-position">
                         <li class="nav-item active">
-                            <a class="nav-link" href="https://demoagro.myvtex.com/">INICIO <span
+                            <a class="nav-link"
+                                href="https://demoagro.myvtex.com/">INICIO <span
                                     class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/institucional/nosotros">SOBRE NOSOTROS</a>
+                            <a class="nav-link" href="/institucional/nosotros">SOBRE
+                                NOSOTROS</a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <a class="nav-link dropdown-toggle" href="#"
+                                id="navbarDropdown" role="button"
+                                data-toggle="dropdown" aria-haspopup="true"
+                                aria-expanded="false">
                                 CATERGORÍAS
                             </a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <div class="dropdown-menu"
+                                aria-labelledby="navbarDropdown">
                                 <a class="dropdown-item submenu-links"
-                                    href="/agro-categorias/alimentos-libres-de-azucar">Alimentos
+                                    href="#"
+                                    onclick="productCategory(25,
+                                    'alimentos-libres-de-azucar'); return
+                                    false;">Alimentos
                                     Libres de Azúcar</a>
                                 <a class="dropdown-item submenu-links"
-                                    href="/agro-categorias/alimentos-libres-de-gluten">Alimentos
+                                    href="https://demoagro.myvtex.com/agro-categorias/alimentos-libres-de-gluten/"
+                                    onclick="productCategory(26,
+                                    'alimentos-libres-de-gluten'); return
+                                    false;">Alimentos
                                     Libres de Gluten</a>
                                 <a class="dropdown-item submenu-links"
-                                    href="/agro-categorias/vegetales-organicos">Vegetales
+                                    href="https://demoagro.myvtex.com/agro-categorias/vegetales-organicos">Vegetales
                                     Orgánicos</a>
-                                <a class="dropdown-item submenu-links" href="/agro-categorias/frutas-organicas">Frutas
+                                <a class="dropdown-item submenu-links"
+                                    href="https://demoagro.myvtex.com/agro-categorias/frutas-organicas">Frutas
                                     Orgánicas</a>
                                 <a class="dropdown-item submenu-links"
-                                    href="/agro-categorias/especias-de-tu-cocina">Especias
+                                    href="https://demoagro.myvtex.com/agro-categorias/especias-de-tu-cocina">Especias
                                     de tu Cocina</a>
                             </div>
                         </li>
@@ -64,50 +79,58 @@
         <div class="col-xs-12 col-md-2">
             <div class="row row-search-cart">
                 <div class="mini-cart mini-cart-xs col-xs-2 visible-xs">
-                    <a title="Carrinho de Compras" href="/checkout/#/cart" class="btn-default">
+                    <a title="Carrinho de Compras" href="/checkout/#/cart"
+                        class="btn-default">
                         <i class="fa fa-shopping-cart"></i>
                         <span class="badge mini-cart-qty-admake">0</span>
                     </a>
                 </div>
                 <!-- .mini-cart-xs -->
 
-                <div class="search col-xs-10 col-sm-6 col-md-6 col-lg-6 text-left">
+                <div class="search col-xs-10 col-sm-6 col-md-6 col-lg-6
+                    text-left">
                     <vtex.cmc:fullTextSearchBox />
-                </div>
+                    </div>
 
-                <div class="mini-cart col-mini-cart col-xs-1 col-sm-6 col-md-6 col-lg-6 hidden-xs">
-                    <a title="Carrinho de Compras" href="/checkout/#/cart" class="btn btn-link btn-block btn-mini-cart">
-                        <i class="fa fa-shopping-cart"></i>
-                        <span class="mini-cart-label"></span>
-                        <span class="badge mini-cart-qty-admake">0</span>
-                    </a>
-                    <div id="mini-cart-admake-aux" class="hidden">
-                        <vtex.cmc:miniCart />
-                        <vtex.cmc:AmountItemsInCart />
-                    </div><!-- #mini-cart-admake-aux -->
-                    <div id="mini-cart-admake" style="display: none;">
-                        <div class="mini-cart-header"></div>
-                        <div class="mini-cart-itens">
-                            <!-- recebe itens -->
-                        </div>
-                        <div class="mini-cart-f-toooter">
-                            <div class="mini-carttais">
-                                <strong id="mini-cart-admake-total" class="pull-right">
-                                    <!-- recebe valor total --></strong>
-                                <span>Total</span>
+                    <div class="mini-cart col-mini-cart col-xs-1 col-sm-6
+                        col-md-6 col-lg-6 hidden-xs">
+                        <a title="Carrinho de Compras" href="/checkout/#/cart"
+                            class="btn btn-link btn-block btn-mini-cart">
+                            <i class="fa fa-shopping-cart"></i>
+                            <span class="mini-cart-label"></span>
+                            <span class="badge mini-cart-qty-admake">0</span>
+                        </a>
+                        <div id="mini-cart-admake-aux" class="hidden">
+                            <vtex.cmc:miniCart />
+                                <vtex.cmc:AmountItemsInCart />
+                                </div><!-- #mini-cart-admake-aux -->
+                                <div id="mini-cart-admake" style="display:
+                                    none;">
+                                    <div class="mini-cart-header"></div>
+                                    <div class="mini-cart-itens">
+                                        <!-- recebe itens -->
+                                    </div>
+                                    <div class="mini-cart-f-toooter">
+                                        <div class="mini-carttais">
+                                            <strong id="mini-cart-admake-total"
+                                                class="pull-right">
+                                                <!-- recebe valor total --></strong>
+                                            <span>Total</span>
+                                        </div>
+                                        <div class="mini-cart-botao
+                                            text-center">
+                                            <a href="/checkout/#/cart"
+                                                class="btn btn-block btn-primary
+                                                btn-finalizar-compra">Finalizar
+                                                Pedido</a>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
-                            <div class="mini-cart-botao text-center">
-                                <a href="/checkout/#/cart"
-                                    class="btn btn-block btn-primary btn-finalizar-compra">Finalizar
-                                    Pedido</a>
-                            </div>
+                            <!-- .mini-cart -->
+
                         </div>
+
                     </div>
                 </div>
-                <!-- .mini-cart -->
-
             </div>
-
-        </div>
-    </div>
-</div>
