--- a/html/categoria-agro.html
+++ b/html/categoria-agro.html
@@ -8,25 +8,22 @@
     <vtex:template id="commonStylesAgro" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="/arquivos/logo-agro.png" />
-
-    <link href="/arquivos/ion.rangeSlider.css" rel="stylesheet" type="text/css" />
-    <link href="/arquivos/ion.rangeSlider.skinHTML5.css" rel="stylesheet" type="text/css" />
-    <script src="/arquivos/ion.rangeSlider.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="/arquivos/bestselleragro.css" />
+    <link rel="stylesheet" type="text/css" href="/arquivos/categoria-agro.css" />
 
     <script src="/arquivos/productCategory.js"></script> 
 
     <script>
-        console.log('probando');
+        console.log('categoria page test');
+        let catId = getParameterByName('catId');
+        productCategoryASC(catId);
     </script>
 
 </head>
 
 <body id="category-page">
 
-    <div class="page">
-
-        <div id="home-extra-top">
-        </div>
+        <div id="home-extra-top"></div>
 
         <header>
             <div class="header">
@@ -43,59 +40,95 @@
 
         <div id="category-extra-top"></div>
 
-        <section id="content" class="container">
-
-            <div id="box-bread-brumb">
-                <vtex.cmc:breadCrumb />
-            </div>
-
-            <div id="category-extra-middle"></div>
-
+        <div class="container-fluid" id="container-categoria">
             <div class="row">
-
-                <aside class="col-xs-3 hidden-xs hidden-sm sidebar">
-                    <div id="departament-navegador">
-                        <!--  Controle: navegador de departamento -->
-                        <vtex.cmc:searchNavigator />
-                        <!-- /Controle: navegador de departamento -->
-
-                        <div id="category-extra-filtro"></div>
-                    </div><!-- #departament-navegador -->
-                </aside><!-- .sidebar -->
-
-                <article id="main-content" class="col-xs-12 col-md-9">
-
-                    <div class="title-category">
-                        <!--  Controle: Titulo -->
-                        <vtex.cmc:searchTitle />
-                        <!-- /Controle: Titulo -->
-                    </div><!-- .title-category -->
-
-                    <div id="departament-banner">
-                        <!--  placeholder -->
-                        <vtex:contentPlaceHolder id="Banner-Principal" />
-                        <!-- /placeholder -->
-                    </div><!-- #departament-banner -->
-
-                    <div id="collections">
-                        <div class="showcase-default">
-                            <!--  Controle: Resultado da busca / Lista de produtos -->
-                            <vtex.cmc:searchResult layout="19ccd66b-b568-43cb-a106-b52f9796f5cd" itemCount="12"
-                                columnCount="3" />
-                            <!--  /Controle: Resultado da busca / Lista de produtos -->
-                        </div><!-- .collection-wrap -->
-                    </div><!-- #collections -->
-
-                </article><!-- #main-content -->
-
-
-                <!--Mi seccion de prueba-->
-                <div id="productos-categoria">probando</div>
-                <!--Mi seccion de prueba-->
-
-            </div><!-- .row -->
-
-        </section><!-- #content -->
+                <div class="col-md-12">
+                    <div id="box-bread-brumb-inst" class="hidden-xs list-inline">
+                        <a href="https://demoagro.myvtex.com/">INICIO</a> /
+                        <span>CATEGORÍAS</span>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-2" id="radio-categoria">
+                    <label>
+                        <input type="radio" name="categoria" value="Alimentos Libres de Azúcar" /> 
+                        SIN FLITROS
+                    </label>
+                    <label>
+                        <input type="radio" name="categoria" value="Alimentos Libres de Azúcar" /> 
+                        LIBRE DE AZÚCAR
+                    </label>
+                    <label>
+                        <input type="radio" name="categoria" value="Alimentos Libres de Gluten" /> 
+                        LIBRE DE GLUTEN
+                    </label>
+                    <label>
+                        <input type="radio" name="categoria" value="Vegetales Orgánicos" /> 
+                        VEGETALES ORGÁNICOS
+                    </label>
+                    <label>
+                        <input type="radio" name="categoria" value="Frutas Orgánicas" /> 
+                        FRUTAS ORGÁNICAS
+                    </label>
+                    <label>
+                        <input type="radio" name="categoria" value="Especias de tu Cocina" /> 
+                        ESPECIAS DE TU COCINA
+                    </label>
+                </div>
+                <div class="col-md-1"></div>
+                <div class="col-md-9">
+                    <div class="row">
+                        <div id="categoria-banner">
+                            <!--  placeholder -->
+                            <vtex:contentPlaceHolder id="Banner-Principal" />
+                            <!-- /placeholder -->
+                        </div><!-- #categoria-banner -->
+                    </div>
+                    <div class="row" id="row-ordenar">
+                        <div class="col-xs-4" id="col-ordenar">
+                            <select class="custom-select" id="selectOrder" onchange="myOrderOfProducts(catId)">
+                                <option>ORDENAR POR</option>
+                                <option value="asc">A-Z</option>
+                                <option value="desc">Z-A</option>
+                                <option value="bestseller">LOS MÁS VENDIDOS</option>
+                                <option value="releasedate">FECHA DE LANZAMIENTO</option>
+                                <option value="bestrate">MEJOR VALORADOS</option>
+                            </select>
+                        </div>
+                        <div class="col-xs-8" id="col-total-productos">
+                            <p>Total de Productos:<script></script></p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-12" id="listado-productos">
+                            <!--Listado de Productos-->
+                            <div id="productos-categoria"></div>
+                            <!--Listado de Productos-->
+                        </div>
+                    </div>
+                    <div class="row">
+                            <div class="col-xs-12">
+                                <nav aria-label="Page navigation example" id="paginado-productos">
+                                    <ul class="pagination justify-content-center">
+                                        <li class="page-item disabled">
+                                            <a class="page-link" href="#" tabindex="-1" aria-disabled="true">Atrás</a>
+                                        </li>
+                                        <li class="page-item"><a class="page-link" href="#">1</a></li>
+                                        <li class="page-item active" aria-current="page">
+                                            <a class="page-link" href="#">2 <span class="sr-only">(current)</span></a>
+                                        </li>
+                                        <li class="page-item"><a class="page-link" href="#">3</a></li>
+                                        <li class="page-item">
+                                            <a class="page-link" href="#">Siguiente</a>
+                                        </li>
+                                    </ul>
+                                </nav>
+                            </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
         <div id="category-extra-bottom"></div>
 
@@ -103,9 +136,9 @@
         <vtex:template id="footer-agro" />
         <!-- /SubTemplate: Footer -->
 
-    </div><!-- .container-fluid -->
 
 </body>
+
 <vtex:template id="commonScriptsAgro" />
 
 </html>
