--- a/html/subTemplates/menu-search-header-agro.html
+++ b/html/subTemplates/menu-search-header-agro.html
@@ -1,5 +1,3 @@
-<script src="/arquivos/productCategory.js"></script>
-
 <style>
     .fa-shopping-cart:before {
         content: "\f290";
@@ -46,25 +44,19 @@
                             <div class="dropdown-menu"
                                 aria-labelledby="navbarDropdown">
                                 <a class="dropdown-item submenu-links"
-                                    href="#"
-                                    onclick="productCategory(25,
-                                    'alimentos-libres-de-azucar'); return
-                                    false;">Alimentos
+                                    href="/categoriasAgro?catId=25">Alimentos
                                     Libres de Azúcar</a>
                                 <a class="dropdown-item submenu-links"
-                                    href="https://demoagro.myvtex.com/agro-categorias/alimentos-libres-de-gluten/"
-                                    onclick="productCategory(26,
-                                    'alimentos-libres-de-gluten'); return
-                                    false;">Alimentos
+                                    href="/categoriasAgro?catId=26">Alimentos
                                     Libres de Gluten</a>
                                 <a class="dropdown-item submenu-links"
-                                    href="https://demoagro.myvtex.com/agro-categorias/vegetales-organicos">Vegetales
+                                    href="/categoriasAgro?catId=28">Vegetales
                                     Orgánicos</a>
                                 <a class="dropdown-item submenu-links"
-                                    href="https://demoagro.myvtex.com/agro-categorias/frutas-organicas">Frutas
+                                    href="/categoriasAgro?catId=27">Frutas
                                     Orgánicas</a>
                                 <a class="dropdown-item submenu-links"
-                                    href="https://demoagro.myvtex.com/agro-categorias/especias-de-tu-cocina">Especias
+                                    href="/categoriasAgro?catId=29">Especias
                                     de tu Cocina</a>
                             </div>
                         </li>
