--- a/html/categoria-agro.html
+++ b/html/categoria-agro.html
@@ -80,6 +80,8 @@
                 <div class="col-md-9">
                     <div class="row">
                         <div id="categoria-banner">
+                            <h1 id="titulo-banner-categorias">Disfruta nuestros vegetales orgánicos</h1>
+                            <a id='boton-banner-categorias' href="/categoriasAgro?catId=28" role='button'>VER MÁS</a>
                             <!--  placeholder -->
                             <vtex:contentPlaceHolder id="Banner-Principal" />
                             <!-- /placeholder -->
@@ -95,9 +97,10 @@
                                 <option value="releasedate">FECHA DE LANZAMIENTO</option>
                                 <option value="bestrate">MEJOR VALORADOS</option>
                             </select>
+                            <i class="fa fa-chevron-down"></i>
                         </div>
                         <div class="col-xs-8" id="col-total-productos">
-                            <p>Total de Productos:<script></script></p>
+                            <p>Total de Productos: </p> <p id="cantProd"></p>
                         </div>
                     </div>
                     <div class="row">
