--- a/html/categoria-agro.html
+++ b/html/categoria-agro.html
@@ -97,9 +97,20 @@
                                 <option value="releasedate">FECHA DE LANZAMIENTO</option>
                                 <option value="bestrate">MEJOR VALORADOS</option>
                             </select>
-                            <i class="fa fa-chevron-down"></i>
+                            <i class="fa fa-chevron-down" style="right:10px;"></i>
                         </div>
-                        <div class="col-xs-8" id="col-total-productos">
+                        <div class="col-xs-4" id="col-productos-pagina">
+                            <select class="custom-select" id="selectProductPerPage" onchange="cantOfProductsToShow()">
+                                <option>ARTICULOS POR PÁGINA</option>
+                                <option value="6">6</option>
+                                <option value="9">9</option>
+                                <option value="12">12</option>
+                                <option value="15">15</option>
+                                <option value="all">TODOS LOS PRODUCTOS</option>
+                            </select>
+                            <i class="fa fa-chevron-down" style="right:25px;"></i>
+                        </div>
+                        <div class="col-xs-4" id="col-total-productos">
                             <p>Total de Productos: </p> <p id="cantProd"></p>
                         </div>
                     </div>
@@ -111,23 +122,22 @@
                         </div>
                     </div>
                     <div class="row">
-                            <div class="col-xs-12">
-                                <nav aria-label="Page navigation example" id="paginado-productos">
-                                    <ul class="pagination justify-content-center">
-                                        <li class="page-item disabled">
-                                            <a class="page-link" href="#" tabindex="-1" aria-disabled="true">Atrás</a>
-                                        </li>
-                                        <li class="page-item"><a class="page-link" href="#">1</a></li>
-                                        <li class="page-item active" aria-current="page">
-                                            <a class="page-link" href="#">2 <span class="sr-only">(current)</span></a>
-                                        </li>
-                                        <li class="page-item"><a class="page-link" href="#">3</a></li>
-                                        <li class="page-item">
-                                            <a class="page-link" href="#">Siguiente</a>
-                                        </li>
-                                    </ul>
-                                </nav>
-                            </div>
+                        <div class="col-xs-12">
+                            <nav class="text-center" id="paginado-productos">
+                                <ul class="pagination justify-content-center">
+                                    <li class="pag_prev">
+                                        <a href="#" aria-label="Previous" class="desplazBoton">
+                                            <span aria-hidden="true">Atrás</span>
+                                        </a>
+                                    </li>
+                                    <li class="pag_next">
+                                        <a href="#" aria-label="Next" class="desplazBoton">
+                                            <span aria-hidden="true">Siguiente</span>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </nav>
+                        </div>
                     </div>
                 </div>
             </div>
