--- a/html/subTemplates/menu-search-header-agro.html
+++ b/html/subTemplates/menu-search-header-agro.html
@@ -44,20 +44,17 @@
                             <div class="dropdown-menu"
                                 aria-labelledby="navbarDropdown">
                                 <a class="dropdown-item submenu-links"
-                                    href="/categoriasAgro?catId=25">Alimentos
-                                    Libres de Azúcar</a>
+                                    href="/categoriasAgro?catId=25">Alimentos Libres de Azúcar</a>
                                 <a class="dropdown-item submenu-links"
-                                    href="/categoriasAgro?catId=26">Alimentos
-                                    Libres de Gluten</a>
+                                    href="/categoriasAgro?catId=26">Alimentos Libres de Gluten</a>
                                 <a class="dropdown-item submenu-links"
-                                    href="/categoriasAgro?catId=28">Vegetales
-                                    Orgánicos</a>
+                                    href="/categoriasAgro?catId=28">Vegetales Orgánicos</a>
                                 <a class="dropdown-item submenu-links"
-                                    href="/categoriasAgro?catId=27">Frutas
-                                    Orgánicas</a>
+                                    href="/categoriasAgro?catId=27">Frutas Orgánicas</a>
                                 <a class="dropdown-item submenu-links"
-                                    href="/categoriasAgro?catId=29">Especias
-                                    de tu Cocina</a>
+                                    href="/categoriasAgro?catId=29">Especias de tu Cocina</a>
+                                <a class="dropdown-item submenu-links"
+                                    href="/categoriasAgro?catId=23">Todos los Productos</a>
                             </div>
                         </li>
                         <li class="nav-item">
